--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <div class="popup">
         <div class="picker">
             <button class="btn">Pick Color</button>
+       <div class="picked-colors hide">
         <header>
             <p>Picked Colors</p>
             <span class="clear-btn"><a href="#">Clear All</a></span>
         </header>
+    </div> 
         <ul class="all-colors">
         </ul>
             
